# autoaivideo

./: .gitignore  CHANGELOG.md  INSTALL.md  README.md  SETUP_GOOGLE_SHEETS.md  UAT_REPORT.md  docker-compose.yml  vercel.json
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: README.md  env.py
backend/alembic/versions/: 141a508530c2_allowed_folders.py  793d0effa4d0_pipelines.py  a1b2c3d4e5f6_media_type.py  b2c4e6f80a11_event_level.py  c7f1a9d3e520_credentials_connections.py  d8a2b4c6e731_video_sources.py  e90554295847_initial_schema.py  f1d3b9a7c204_video_source_dedup_rowmap.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/cloud/: google_auth.py  google_sheets.py
backend/app/core/: config.py  constants.py  errors.py  logging.py  security.py
backend/app/db/: base.py  ids.py  session.py
backend/app/models/: __init__.py  agent.py  allowed_folder.py  asset.py  batch.py  connection.py  credential.py  enums.py  event.py  job.py  job_queue.py  pipeline.py  plugin.py  project.py  step.py  video_source.py  video_source_item.py
backend/app/orchestrator/: agent_registry.py  dispatcher.py  engine.py  queue.py  retry.py  (+1 more)
backend/tests/: conftest.py  test_auth.py  test_batches.py  test_credentials.py  test_external_apps.py  test_fs.py  test_health.py  test_jobs.py  test_logs.py  test_media_check.py  test_orchestrator.py  test_output_path.py  test_pipelines.py  test_plugins.py  test_projects.py  test_recovery.py  test_sheet_writeback.py  test_stats.py  test_video_sources.py  test_ws.py
(+203 files in other folders)
