[project]
name = "aivideo-backend"
version = "2.0.0"
description = "AI Video Platform V2 — Backend (FastAPI)"
requires-python = ">=3.11"
readme = "../README.md"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["alembic"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["B008"]  # FastAPI Depends() trong default tham số

[tool.pytest.ini_options]
testpaths = ["tests"]
